[B] Misc style fixes to project hero/content blocks
* Adjusts breakpoint for text block layout change to show cover and
two-column layout until narrower viewport width
* Improves responsive sizing of elements in resource collection thumbs
* Increases min-width of hero right-hand block
* Fixes iOS text selection blocking use of drag handles on backend
* Fixes collapse of callout chip buttons when long title present
* Prevents hero block "Edit" label from showing on very narrow viewports
* Reduces spacing between content block buttons on narrow viewports
* Sets `overflow` to `auto` on drawers to prevent empty scrollbars

--- a/client/src/theme/Components/backend/project/_action_callout_slot.scss
+++ b/client/src/theme/Components/backend/project/_action_callout_slot.scss
@@ -38,6 +38,13 @@
       margin-bottom: 4px;
     }
 
+    &--draggable {
+      cursor: move; // fallback for older browsers
+      cursor: grab;
+      user-select: none;
+      -webkit-touch-callout: none;
+    }
+
     &:not(:last-child) {
       svg {
         margin-right: 8px;
@@ -73,29 +80,19 @@
     justify-content: space-between;
     padding: 9px 15px 11px;
     font-size: 12px;
-    line-height: 1;
+    line-height: 1.2;
     color: $neutral50;
     letter-spacing: 0.125em;
     background: $neutral95;
     border-radius: 5px;
+  }
 
-    & + & {
-      //margin-top: 10px;
-    }
+  &__chip-title {
+    flex-grow: 1;
   }
 
   &__chip-utility {
+    display: flex;
     margin-left: 10px;
   }
-
-  &__button {
-    @include buttonUnstyled;
-
-    &--draggable {
-      cursor: move; // fallback for older browsers
-      cursor: grab;
-    }
-  }
-
-
 }
